# nro-thumbnailer

./: .gitignore  CMakeLists.txt  README.md
CMakeModules/: FindFreeImage.cmake
integration/: nro.thumbnailer  switch-executable-nro.xml
src/: CLI11.hpp  main.cpp  switch_border.h  switch_structs.h
